bindings/c/include/DocumentFilters.h

	typedef wchar_t IGR_UCS2;
	typedef long IGR_LONG;
	typedef unsigned long IGR_ULONG;
typedef uint16_t IGR_UCS2;
typedef int32_t IGR_LONG;
typedef uint32_t IGR_ULONG;
	typedef short int IGR_SHORT;
	typedef int64_t IGR_LONGLONG;
	typedef float IGR_FLOAT;
	typedef IGR_LONG IGR_RETURN_CODE;
#define IGR_FILETYPE_UNKNOWN                               0
#define IGR_FILETYPE_TEXT                                  100
#define IGR_FILETYPE_TEXT_MARKUP                           101
#define IGR_FILETYPE_TEXT_DATA                             102
#define IGR_FILETYPE_WORD_PROCESSOR                        200
#define IGR_FILETYPE_SPREADSHEET                           300
#define IGR_FILETYPE_PRESENTATION                          400
#define IGR_FILETYPE_OFFICE_OTHER                          500
#define IGR_FILETYPE_CAD                                   600
#define IGR_FILETYPE_ARCHIVE                               700
#define IGR_FILETYPE_SYSTEM                                800
#define IGR_FILETYPE_DATABASE                              900
#define IGR_FILETYPE_GRAPHIC                               1000
#define IGR_FILETYPE_GRAPHIC_RASTER                        1001
#define IGR_FILETYPE_GRAPHIC_VECTOR                        1002
#define IGR_FILETYPE_EMAIL                                 1100
#define IGR_FILETYPE_EMAIL_MESSAGE                         1101
#define IGR_FILETYPE_EMAIL_CONTAINER                       1102
#define IGR_FILETYPE_EMAIL_CONTACT                         1103
#define IGR_FILETYPE_EMAIL_CALENDAR                        1104
#define IGR_FILETYPE_EMAIL_OTHER                           1105
#define IGR_FILETYPE_MULTIMEDIA                            1200
#define IGR_FILETYPE_MULTIMEDIA_VIDEO                      1201
#define IGR_FILETYPE_MULTIMEDIA_AUDIO                      1202
#define IGR_FILETYPE_PUBLISHING                            1300
#define IGR_FILETYPE_APPDATA                               2000
#define IGR_LOG_LEVEL_NONE                                 0
#define IGR_LOG_LEVEL_CRITICAL                             1
#define IGR_LOG_LEVEL_ERROR                                2
#define IGR_LOG_LEVEL_WARNING                              3
#define IGR_LOG_LEVEL_INFORMATION                          4
#define IGR_LOG_LEVEL_DEBUG                                5
#define IGR_LOG_LEVEL_TRACE                                6
#define IGR_OPEN_BITMAP_PIXEL_TYPE                         IGR_LONG
#define IGR_SUBFILE_INFO_FLAG_PASSWORD_PROTECTED           0x0002
#define IGR_SUBFILE_INFO_FLAG_HAS_COMMENT                  0x0004
	typedef struct tagError_Control_Block
	{
		char Msg[238];
		IGR_SHORT MsgId;
	} Error_Control_Block;
	typedef struct tagInstance_Status_Block
	{
		char DLL_Version[16];
		IGR_SHORT RReserved;
		IGR_SHORT License_Type;
		char Licensee_ID1[40];
		char Licensee_ID2[40];
	} Instance_Status_Block, *LPInstance_Status_Block;
	struct IGR_Stream
	{
		ULONG(CALLBACK* Open)(struct IGR_Stream* stream);
		ULONG(CALLBACK* Read)(struct IGR_Stream* stream, void* buffer, ULONG bufferSize);
		IGR_LONGLONG(CALLBACK* Seek)(struct IGR_Stream* stream, IGR_LONGLONG offset, ULONG whence);
		void(CALLBACK* Close)(struct IGR_Stream* stream);
	};
	struct IGR_Writable_Stream
	{
		struct IGR_Stream base;
		ULONG(CALLBACK* Write)(struct IGR_Writable_Stream* stream, void* buffer, ULONG bufferSize);
	};
	struct IGR_Rect
	{
		IGR_ULONG left;
		IGR_ULONG top;
		IGR_ULONG right;
		IGR_ULONG bottom;
	};
	struct IGR_FRect
	{
		IGR_FLOAT left;
		IGR_FLOAT top;
		IGR_FLOAT right;
		IGR_FLOAT bottom;
	};
	struct IGR_Size
	{
		IGR_ULONG width;
		IGR_ULONG height;
	};
	struct IGR_FPoint
	{
		IGR_FLOAT x;
		IGR_FLOAT y;
	};
	struct IGR_QuadPoint
	{
		union
		{
			struct
			{
				struct IGR_FPoint upperLeft;
				struct IGR_FPoint upperRight;
				struct IGR_FPoint lowerRight;
				struct IGR_FPoint lowerLeft;
			};
			struct IGR_FPoint points[4];
		};
	};
	struct IGR_Page_Word
	{
		IGR_LONG x;
		IGR_LONG y;
		IGR_LONG width;
		IGR_LONG height;
		IGR_LONG style;
		const IGR_UCS2* word;
		IGR_LONG wordLength;
		IGR_LONG charoffset;
		IGR_LONG reserved[8];
	};
	struct IGR_Page_Form_Element
	{
		const void* reserved;
		IGR_UCS2 name[255];
		IGR_LONG x;
		IGR_LONG y;
		IGR_LONG width;
		IGR_LONG height;
		IGR_PAGE_FORM_ELEMENT_TYPE type;
		IGR_LONG flags;
		IGR_LONG fontSize;
		IGR_TEXT_STYLE_TYPE fontStyle;
		IGR_LONG rotation;
		IGR_TEXT_ALIGN_TYPE textAlignment;
		IGR_LONG selectedItem;
		IGR_LONG option_count;
		IGR_LONG reserved2[8];
	};
	struct IGR_Bookmark
	{
		const void* reserved;
		IGR_LONG flags;
		IGR_UCS2 title[255];
		IGR_BOOKMARK_ACTION_TYPE action;
		IGR_UCS2 dest[1024];
		IGR_LONG level;
		IGR_BOOKMARK_FIT_TYPE fit;
		IGR_LONG zoom;
		IGR_LONG x;
		IGR_LONG y;
		IGR_LONG width;
		IGR_LONG height;
		IGR_LONG color;
		IGR_LONG text_style;
		IGR_LONG reserved2[8];
	};
	typedef IGR_LONG (*IGR_CALLBACK)(int actionID, void* actionData, void* context);
	struct IGR_T_ACTION_GET_STREAM_PART
	{
		IGR_ULONG size;
		const wchar_t* partName;
		const wchar_t* partFullName;
		IGR_LONG partIndex;
		struct IGR_Stream* istr;
	};
	struct IGR_Render_Page_Form_Values
	{
		const IGR_UCS2* name;
		const IGR_UCS2* value;
		IGR_LONG selected;
	};
	struct IGR_Render_Page_Redactions
	{
		IGR_LONG x;
		IGR_LONG y;
		IGR_LONG width;
		IGR_LONG height;
		IGR_COLOR_TYPE color;
		IGR_ULONG reserved;
	};
	struct IGR_Render_Page_Properties
	{
		IGR_ULONG struct_size;
		IGR_ULONG form_value_count;
		const struct IGR_Render_Page_Form_Values* form_values;
		IGR_REDACT_FLAGS_TYPE redaction_flags;
		IGR_ULONG redaction_count;
		const struct IGR_Render_Page_Redactions* redactions;
		struct IGR_Rect source_rect;
		struct IGR_Rect dest_rect;
	};
	struct IGR_Hyperlink
	{
		const void* reserved;
		IGR_HYPERLINK_ACTION_TYPE type;
		IGR_LONG x;
		IGR_LONG y;
		IGR_LONG width;
		IGR_LONG height;
		IGR_LONG page_number;
		IGR_HYPERLINK_FIT_TYPE dest_fit;
		IGR_LONG dest_zoom;
		IGR_LONG dest_left;
		IGR_LONG dest_top;
		IGR_LONG dest_right;
		IGR_LONG dest_bottom;
		IGR_HYPERLINK_FLAGS_TYPE flags;
		IGR_LONG reserved2[8];
	};
	struct IGR_Open_DIB_Info
	{
		IGR_ULONG struct_size;
		IGR_ULONG flags;
		IGR_ULONG width;
		IGR_ULONG height;
		IGR_ULONG stride;
		IGR_OPEN_BITMAP_PIXEL_TYPE pixel_format;
		const void* pixel_data;
		IGR_ULONG pixel_data_size;
		const IGR_LONG* palette;
		IGR_ULONG palette_count;
		IGR_ULONG dpi_x;
		IGR_ULONG dpi_y;
		IGR_OPEN_BITMAP_ORIENTATION_TYPE orientation;
	};
	struct IGR_Page_Pixels
	{
		IGR_ULONG width;
		IGR_ULONG height;
		IGR_LONG stride;
		IGR_OPEN_BITMAP_PIXEL_TYPE pixel_format;
		IGR_OPEN_BITMAP_FLAGS_TYPE flags;
		void* scanline0;
		IGR_ULONG palette_count;
		IGR_LONG palette[256];
		void* reserved;
	};
	struct IGR_Annotation
	{
		const void* reserved;
		IGR_ANNOTATION_TYPE type;
		IGR_ANNOTATION_FLAGS_TYPE flags;
		IGR_LONG x;
		IGR_LONG y;
		IGR_LONG width;
		IGR_LONG height;
		IGR_LONG reserved2[8];
	};
	struct IGR_Open_Callback_Action_Heartbeat
	{
		IGR_ULONG struct_size;
	};
	struct IGR_Open_Callback_Action_Password
	{
		IGR_ULONG struct_size;
		IGR_UCS2 id[4096];
		IGR_UCS2 password[4096];
	};
	struct IGR_Open_Callback_Action_Localize
	{
		IGR_ULONG struct_size;
		IGR_ULONG string_id;
		IGR_UCS2 original[1024];
		IGR_UCS2 replacement[1024];
	};
	struct IGR_Open_Callback_Action_Log_Level
	{
		IGR_ULONG struct_size;
		char module[16];
		IGR_LOG_LEVEL_TYPE result;
	};
	struct IGR_Open_Callback_Action_Log_Message
	{
		IGR_ULONG struct_size;
		char module[16];
		IGR_LOG_LEVEL_TYPE log_level;
		char message[512];
	};
	struct IGR_Open_Callback_Action_Approve_External_Resource
	{
		IGR_ULONG struct_size;
		IGR_UCS2 url[1024];
	};
	struct IGR_Open_Callback_Action_Get_Resource_Stream
	{
		IGR_ULONG struct_size;
		IGR_UCS2 url[1024];
		struct IGR_Stream* result;
	};
	struct IGR_Open_Callback_Action_OCR_Image_Style_Info
	{
		IGR_ULONG struct_size;
		IGR_FLOAT font_size;
		IGR_UCS2 font_family[256];
		IGR_ULONG text_style;
	};
	IGR_RETURN_CODE IGR_EXPORT IGR_Make_Stream_From_Functions(void* context, IGR_MAKE_STREAM_FROM_FUNCTIONS_FLAGS_TYPE flags,
	                                                          IGR_LONGLONG(CALLBACK* seek)(void* context, IGR_LONGLONG offset,
	                                                                                       IGR_ULONG whence),
	                                                          IGR_ULONG(CALLBACK* read)(void* context, void* buffer, IGR_ULONG buffer_size),
	                                                          IGR_ULONG(CALLBACK* write)(void* context, const void* buffer,
	                                                                                     IGR_ULONG buffer_size),
	                                                          IGR_LONG(CALLBACK* action)(void* context, int actionId, void* action_data),
	                                                          void(CALLBACK* destruct)(void* context), struct IGR_Stream** stream,
	                                                          Error_Control_Block* error);