bindings/python/src/DocumentFilters/DocumentFiltersAPI.py


IGR_FILETYPE_UNKNOWN              = 0
IGR_FILETYPE_TEXT                 = 100
IGR_FILETYPE_TEXT_MARKUP          = 101
IGR_FILETYPE_TEXT_DATA            = 102
IGR_FILETYPE_WORD_PROCESSOR       = 200
IGR_FILETYPE_SPREADSHEET          = 300
IGR_FILETYPE_PRESENTATION         = 400
IGR_FILETYPE_OFFICE_OTHER         = 500
IGR_FILETYPE_CAD                  = 600
IGR_FILETYPE_ARCHIVE              = 700
IGR_FILETYPE_SYSTEM               = 800
IGR_FILETYPE_DATABASE             = 900
IGR_FILETYPE_GRAPHIC              = 1000
IGR_FILETYPE_GRAPHIC_RASTER       = 1001
IGR_FILETYPE_GRAPHIC_VECTOR       = 1002
IGR_FILETYPE_EMAIL                = 1100
IGR_FILETYPE_EMAIL_MESSAGE        = 1101
IGR_FILETYPE_EMAIL_CONTAINER      = 1102
IGR_FILETYPE_EMAIL_CONTACT        = 1103
IGR_FILETYPE_EMAIL_CALENDAR       = 1104
IGR_FILETYPE_EMAIL_OTHER          = 1105
IGR_FILETYPE_MULTIMEDIA           = 1200
IGR_FILETYPE_MULTIMEDIA_VIDEO     = 1201
IGR_FILETYPE_MULTIMEDIA_AUDIO     = 1202
IGR_FILETYPE_PUBLISHING           = 1300
IGR_FILETYPE_APPDATA              = 2000

IGR_SUBFILE_INFO_FLAG_PASSWORD_PROTECTED = 0x0002
IGR_SUBFILE_INFO_FLAG_HAS_COMMENT = 0x0004

IGR_LOG_LEVEL_NONE =  0
IGR_LOG_LEVEL_CRITICAL =  1
IGR_LOG_LEVEL_ERROR =  2
IGR_LOG_LEVEL_WARNING =  3
IGR_LOG_LEVEL_INFORMATION =  4
IGR_LOG_LEVEL_DEBUG =  5
IGR_LOG_LEVEL_TRACE =  6

def UNCHECKED(type):
    if hasattr(type, "_type_") and isinstance(type._type_, str) and type._type_ != "P":
        return type
    else:
        return ctypes.c_void_p

def IGRFUNCTYPE(*arg):
    if os.name == 'nt':
        return ctypes.WINFUNCTYPE(*arg)
    else:
        return ctypes.CFUNCTYPE(*arg)

class Error_Control_Block(ctypes.Structure):
    _fields_ = [
        ('Msg', ctypes.c_char * int(238)),
        ('MsgId', IGR_SHORT),
    ]

class Instance_Status_Block(ctypes.Structure):
    _fields_ = [
        ('DLL_Version', ctypes.c_char * int(16)),
        ('RReserved', IGR_LONG),
        ('Licensee_ID1', ctypes.c_char * int(40)),
        ('Licensee_ID2', ctypes.c_char * int(40)),
    ]

IGR_Stream_Open = IGRFUNCTYPE(UNCHECKED(IGR_ULONG), ctypes.POINTER(None))
IGR_Stream_Read = IGRFUNCTYPE(UNCHECKED(IGR_ULONG), ctypes.POINTER(None), ctypes.POINTER(None), IGR_ULONG)
IGR_Stream_Seek = IGRFUNCTYPE(UNCHECKED(IGR_LONGLONG), ctypes.POINTER(None), IGR_LONGLONG, IGR_ULONG)
IGR_Stream_Close = IGRFUNCTYPE(UNCHECKED(None), ctypes.POINTER(None))
IGR_Stream_Write = IGRFUNCTYPE(UNCHECKED(IGR_ULONG), ctypes.POINTER(None), ctypes.POINTER(None), IGR_ULONG)
IGR_Stream_ActionCallback = IGRFUNCTYPE(UNCHECKED(ctypes.c_int), ctypes.c_int, ctypes.POINTER(None), ctypes.POINTER(None))

IGR_Make_Stream_Read = ctypes.CFUNCTYPE(UNCHECKED(IGR_ULONG), ctypes.POINTER(None), ctypes.POINTER(None), IGR_ULONG)
IGR_Make_Stream_Seek = ctypes.CFUNCTYPE(UNCHECKED(IGR_LONGLONG), ctypes.POINTER(None), IGR_LONGLONG, IGR_ULONG)
IGR_Make_Stream_Write = ctypes.CFUNCTYPE(UNCHECKED(IGR_ULONG), ctypes.POINTER(None), ctypes.POINTER(None), IGR_ULONG)
IGR_Make_Stream_Action = ctypes.CFUNCTYPE(UNCHECKED(IGR_LONG), ctypes.POINTER(None), IGR_LONG, ctypes.POINTER(None))
IGR_Make_Stream_Destruct = ctypes.CFUNCTYPE(UNCHECKED(None), ctypes.POINTER(None))

if sys.byteorder == 'big':
    IGR_Make_Stream_Seek = ctypes.CFUNCTYPE(UNCHECKED(IGR_ULONG), ctypes.POINTER(None), IGR_LONGLONG, IGR_ULONG)

class IGR_Stream(ctypes.Structure):
    _fields_ = [
        ('Open', IGR_Stream_Open),
        ('Read', IGR_Stream_Read),
        ('Seek', IGR_Stream_Seek),
        ('Close', IGR_Stream_Close),
        ('Write', IGR_Stream_Write),
        ('Context', IGR_ULONG),
    ]

IGR_Writable_Stream = IGR_Stream

class IGR_Rect(ctypes.Structure):
    _fields_ = [
        ('left', IGR_ULONG),
        ('top', IGR_ULONG),
        ('right', IGR_ULONG),
        ('bottom', IGR_ULONG),
    ]

class IGR_FRect(ctypes.Structure):
    _fields_ = [
        ("left", IGR_FLOAT),
        ("top", IGR_FLOAT),
        ("right", IGR_FLOAT),
        ("bottom", IGR_FLOAT),
    ]

class IGR_Size(ctypes.Structure):
    _fields_ = [
        ('width', IGR_ULONG),
        ('height', IGR_ULONG),
    ]


class IGR_FPoint(ctypes.Structure):
    _fields_ = [
        ('x', IGR_FLOAT),  # X position.
        ('y', IGR_FLOAT),  # Y position.
    ]


class IGR_QuadPoint(ctypes.Structure):
    _fields_ = [
        ('upperLeft', IGR_FPoint),   # Upper left corner.
        ('upperRight', IGR_FPoint),  # Upper right corner.
        ('lowerRight', IGR_FPoint),  # Lower right corner.
        ('lowerLeft', IGR_FPoint),   # Lower left corner.
    ]


class IGR_Page_Word(ctypes.Structure):
    _fields_ = [
        ('x', ctypes.c_int),
        ('y', ctypes.c_int),
        ('width', ctypes.c_int),
        ('height', ctypes.c_int),
        ('style', ctypes.c_int),
        ('word', ctypes.POINTER(IGR_UCS2)),
        ('wordLength', ctypes.c_int),
        ('charoffset', ctypes.c_int),
        ('reserved', ctypes.c_int * int(8)),
    ]

class IGR_Bookmark(ctypes.Structure):
    _fields_ = [
        ('reserved', ctypes.POINTER(None)),
        ('flags', IGR_LONG),
        ('title', IGR_UCS2 * 255),
        ('action', IGR_LONG),
        ('dest', IGR_UCS2 * 1024),
        ('level', IGR_LONG),
        ('fit', IGR_LONG),
        ('zoom', IGR_LONG),
        ('x', IGR_LONG),
        ('y', IGR_LONG),
        ('width', IGR_LONG),
        ('height', IGR_LONG),
        ('color', IGR_LONG),
        ('text_style', IGR_LONG),
        ('reserved2', IGR_LONG * 8),
    ]

class IGR_T_ACTION_GET_STREAM_PART(ctypes.Structure):
    _fields_ = [
        ('size', ctypes.c_uint),
        ('partName', ctypes.c_wchar_p),
        ('partFullName', ctypes.c_wchar_p),
        ('partIndex', ctypes.c_int),
        ('istr', ctypes.POINTER(IGR_Stream)),
    ]

class struct_IGR_Page_Form_Element(ctypes.Structure):
    pass

class IGR_Page_Form_Element(ctypes.Structure):
    _fields_ = [
        ('reserved', ctypes.POINTER(None)),
        ('name', IGR_UCS2 * int(255)),
        ('x', IGR_LONG),
        ('y', IGR_LONG),
        ('width', IGR_LONG),
        ('height', IGR_LONG),
        ('type', IGR_LONG),
        ('flags', IGR_LONG),
        ('fontSize', IGR_LONG),
        ('fontStyle', IGR_LONG),
        ('rotation', IGR_LONG),
        ('textAlignment', IGR_LONG),
        ('selectedItem', IGR_LONG),
        ('option_count', IGR_LONG),
        ('reserved2', IGR_LONG * int(8)),
    ]

class IGR_Hyperlink(ctypes.Structure):
    _fields_ = [
        ('reserved', ctypes.POINTER(None)),
        ('type', IGR_LONG),
        ('x', IGR_LONG),
        ('y', IGR_LONG),
        ('width', IGR_LONG),
        ('height', IGR_LONG),
        ('page_number', IGR_LONG),
        ('dest_fit', IGR_LONG),
        ('dest_zoom', IGR_LONG),
        ('dest_left', IGR_LONG),
        ('dest_top', IGR_LONG),
        ('dest_right', IGR_LONG),
        ('dest_bottom', IGR_LONG),
        ('flags', IGR_LONG),
        ('reserved2', IGR_LONG * int(8)),
    ]

class IGR_Annotation(ctypes.Structure):
    _fields_ = [
        ('reserved', ctypes.POINTER(None)),
        ('type', IGR_LONG),
        ('flags', IGR_LONG),
        ('x', IGR_LONG),
        ('y', IGR_LONG),
        ('width', IGR_LONG),
        ('height', IGR_LONG),
        ('reserved2', IGR_LONG * int(8)),
    ]

class IGR_Render_Page_Form_Values(ctypes.Structure):
    _fields_ = [
        ('name', ctypes.POINTER(IGR_UCS2)),
        ('value', ctypes.POINTER(IGR_UCS2)),
        ('selected', IGR_LONG),
    ]

class IGR_Render_Page_Redactions(ctypes.Structure):
    _fields_ = [
        ('x', IGR_LONG),
        ('y', IGR_LONG),
        ('width', IGR_LONG),
        ('height', IGR_LONG),
        ('color', IGR_LONG),
        ('reserved', IGR_LONG),
    ]

class IGR_Render_Page_Properties(ctypes.Structure):
    _fields_ = [
        ('struct_size', IGR_ULONG),
        ('form_value_count', IGR_ULONG),
        ('form_values', ctypes.POINTER(IGR_Render_Page_Form_Values)),
        ('redaction_flags', IGR_LONG),
        ('redaction_count', IGR_LONG),
        ('redactions', ctypes.POINTER(IGR_Render_Page_Redactions)),
        ('source_rect', IGR_Rect),
        ('dest_rect', IGR_Rect),
    ]

class IGR_Page_Pixels(ctypes.Structure):
    _fields_ = [
        ('width', IGR_ULONG),
        ('height', IGR_ULONG),
        ('stride', IGR_ULONG),
        ('pixel_format', IGR_LONG),
        ('flags', IGR_LONG),
        ('scanline0', ctypes.POINTER(None)),
        ('palette_count', IGR_ULONG),
        ('palette', IGR_ULONG * 256),
        ('reserved', ctypes.POINTER(None)),
    ]

IGR_CALLBACK = ctypes.CFUNCTYPE(UNCHECKED(IGR_LONG), ctypes.c_int, ctypes.POINTER(None), ctypes.POINTER(None))


class IGR_Open_Callback_Action_Heartbeat(ctypes.Structure):
    _fields_ = [
        ('struct_size', IGR_ULONG),
    ]


class IGR_Open_Callback_Action_Password(ctypes.Structure):
    _fields_ = [
        ('struct_size', IGR_ULONG),
        ('id', IGR_UCS2 * 4096),
        ('password', IGR_UCS2 * 4096),
    ]


class IGR_Open_Callback_Action_Localize(ctypes.Structure):
    _fields_ = [
        ('struct_size', IGR_ULONG),
        ('string_id', IGR_ULONG),
        ('original', IGR_UCS2 * 1024),
        ('replacement', IGR_UCS2 * 1024),
    ]


class IGR_Open_Callback_Action_Log_Level(ctypes.Structure):
    _fields_ = [
        ('struct_size', IGR_ULONG),
        ('module', ctypes.c_char * int(16)),
        ('result', IGR_ULONG),
    ]


class IGR_Open_Callback_Action_Log_Message(ctypes.Structure):
    _fields_ = [
        ('struct_size', IGR_ULONG),
        ('module', ctypes.c_char * int(16)),
        ('log_level', IGR_ULONG),
        ('message', ctypes.c_char * int(512)),
    ]


class IGR_Open_Callback_Action_Approve_External_Resource(ctypes.Structure):
    _fields_ = [
        ('struct_size', IGR_ULONG),
        ('url', IGR_UCS2 * 1024),
    ]
    
class IGR_Open_Callback_Action_Get_Resource_Stream(ctypes.Structure):
    _fields_ = [
        ('struct_size', IGR_ULONG),
        ('url', IGR_UCS2 * 1024),
        ('result', ctypes.POINTER(IGR_Stream)),
    ]
    
    
class IGR_Open_DIB_Info(ctypes.Structure):
    _fields_ = [
        ('struct_size', IGR_ULONG),                  # Size of this structure, must be populated.
        ('flags', IGR_ULONG),                       # Flags indicating specific characteristics.
        ('width', IGR_ULONG),                       # Width of the bitmap, in pixels.
        ('height', IGR_ULONG),                      # Height of the bitmap, in pixels.
        ('stride', IGR_ULONG),                      # Number of bytes per scanline.
        ('pixel_format', IGR_LONG),                 # Format of the pixel data (IGR_OPEN_BITMAP_PIXEL_TYPE).
        ('pixel_data', ctypes.POINTER(ctypes.c_void_p)), # Pointer to the raw pixel data.
        ('pixel_data_size', IGR_ULONG),             # Size of the buffer in pixel_data.
        ('palette', ctypes.POINTER(IGR_LONG)),      # Pointer to the RGB palette information.
        ('palette_count', IGR_ULONG),               # Number of colors in the palette.
        ('dpi_x', IGR_ULONG),                       # Horizontal resolution of the bitmap.
        ('dpi_y', IGR_ULONG),                       # Vertical resolution of the bitmap.
        ('orientation', IGR_ULONG),                 # Orientation of the bitmap.
    ]
    

class IGR_Open_Callback_Action_OCR_Image_Style_Info(ctypes.Structure):
    _fields_ = [
        ('struct_size', IGR_ULONG),  # Indicate the size of this structure; must be populated.
        ('font_size', IGR_FLOAT),  # The size of the font as reported by the OCR engine.
        ('font_family', IGR_UCS2 * 256),  # The font family as reported by the OCR engine.
        ('text_style', IGR_ULONG),  # The font style, using the IGR_TEXT_STYLE_ bitfield.
    ]

